--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,57 +1,80 @@
-.profile {
-    width: 300px;
-    margin: 0 auto;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+.container {
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    font-family: Arial, sans-serif;
+    margin: 32px auto;
+    padding: 16px;
+    border-radius: 8px;
+    box-shadow: rgb(255, 255, 255) -0.0625rem -0.0625rem 0.0625rem, rgb(186, 190, 204) 0.0625rem 0.0625rem 0.0625rem;
+    background-color: gray;
 }
 
-.description {
-    padding: 20px;
+.mainContainer {
+    overflow: hidden;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    max-width: 100%;
+    width: 360px;
+    margin: 0 auto;
+    box-shadow: -1px -1px 1px #fff, 1px 1px 1px #babecc;
+    border-radius: 10px;
+    background: #d5d6d9;
 }
 
-.avatar {
-    width: 100px;
+.containerProfile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 4px
+}
+
+.profileImg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    width: 150px;
     border-radius: 50%;
+    box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1;
 }
 
-.name,
-.tag,
-.location {
-    margin: 10px 0;
-    font-size: 18px;
-    font-weight: bold;
+.profilePrimaryParagraf {
+    color: black;
+    text-shadow: 1px 1px 1px #fff;
+    font-family: 'Roboto';
+    font-size: 24px;
+    font-weight: 700;
 }
 
-.tag,
-.location {
-    color: #888;
+.profileSecondaryParagraf {
+    font-size: 24px;
+    font-weight: 400;
+    color: rgb(110, 107, 107);
+}
+
+.listItem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    border: 1px solid rgb(98, 97, 97);
 }
 
 .stats {
-    display: flex;
-    justify-content: space-around;
-    padding: 10px 0;
-    border-top: 1px solid #ccc;
-    background-color: #fff;
-}
-
-.stats li {
-    list-style: none;
-    text-align: center;
-}
-
-.label {
-    display: block;
-    font-size: 14px;
-    color: #888;
-}
-
-.quantity {
-    font-size: 18px;
-    font-weight: bold;
-    color: #333;
+    font-weight: 400;
 }
