add-friend-file

--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -42,6 +42,7 @@
     width: 150px;
     border-radius: 50%;
     box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1;
+    background-color: black;
 }
 
 .profilePrimaryParagraf {
