--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -3,6 +3,7 @@
     padding: 16px;
     border-radius: 8px;
     box-shadow: rgb(255, 255, 255) -0.0625rem -0.0625rem 0.0625rem, rgb(186, 190, 204) 0.0625rem 0.0625rem 0.0625rem;
+    background-color: gray;
 }
 
 .listItem {
